<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/new_user_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Yu"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_surname"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/register_surname"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Hou"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_dob"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="date"
                    android:imeActionLabel="@string/register_dob"
                    android:text="1995-06-27"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_address"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="text"
                    android:imeActionLabel="@string/register_address"
                    android:text="22 Boston Ave"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_postcode"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPostalAddress"
                    android:digits="0123456789"
                    android:maxLength="4"
                    android:imeActionLabel="@string/register_postcode"
                    android:text="3145"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email_address"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:imeActionLabel="@string/register_email_address"
                    android:text="yhou0007@student.monash.com"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_mobile"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:digits="1234567890"
                    android:imeActionLabel="@string/register_mobile"
                    android:text="049121111"/>

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/register_resident_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_number_of_residents"
                android:clickable="false"
                android:inputType="none">
            </EditText>

            <Spinner
                android:id="@+id/register_number_of_residents_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/resident_number">
            </Spinner>

            <EditText
                android:id="@+id/register_energy_provider_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_energy_provider"
                android:clickable="false"
                android:inputType="none">
            </EditText>

            <Spinner
                android:id="@+id/register_energy_provider_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/energy_provider">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_user_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="text"
                    android:imeActionLabel="@string/register_user_name"
                    android:text="yhou"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:imeActionLabel="@string/register_password"
                    android:text="123"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_submit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_submit_button"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>